--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="game.js"></script>
+    <script src="game.js" defer></script>
 </head>
 <body>
+    <button class="btn rock">ROCK</button>
+    <button class="btn paper">PAPER</button>
+    <button class="btn scissors">SCISSORS</button>
+    <div class="result"></div>
+    <div class="score">Player: 0 Computer: 0</div>
     
 </body>
 </html>
